--- a/blog.html
+++ b/blog.html
@@ -3,8 +3,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Barlow:400,700|Lato&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="styles/sass/style.scss">
+    <link href="https://fonts.googleapis.com/css?family=Barlow:700|Lato&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="styles/style.css">
     <title>Alexa W - Blog - Under The Sea</title>
 </head>
 <body>
