added more styling for blog page

--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
             <input type="email" name="email" id="email" placeholder="Email Address">
     
             <label for="message" class="visuallyhidden">Message</label>
-            <input type="text" name="message" id="message" placeholder="Message">
+            <input class="message-textbox" type="text" name="message" id="message" placeholder="Message">
     
             <input type="submit" value="Submit">
     </fieldset>
