responsiveness added to homepage

--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav> 
-            <!-- <div class="header-container">
+
+            <div class="home-h1-container">
                 <h1 class="home-h1">Under The Sea</h1>
+            </div>
+            <div class="home-header-img-container">
                 <img class="home-header-img full-width" src="images/home-box-header.png" alt="Aquarium exhibit with fish tank covering a walkway like a dom.">
-            </div> -->
-            <h1 class="home-h1">Under The Sea</h1>
-            <img class="home-header-img full-width" src="images/home-box-header.png" alt="Aquarium exhibit with fish tank covering a walkway like a dom.">
+            </div>
 
         </div>
     </header>
@@ -136,9 +137,9 @@
     <section class="gallery">
         <div class="wrapper">
             <ul class="gallery-ul">
-                <li class="gallery-container"><img src="images/gallery-image-1.jpg"></li>  
-                <li class="gallery-container"><img src="images/gallery-image-2.jpg"></li>
-                <li class="gallery-container"><img src="images/gallery-image-3.jpg"></li>
+                <li class="gallery-container"><img src="images/gallery-image-1.jpg" alt="Little girl looks into aquarium tank."></li>  
+                <li class="gallery-container"><img src="images/gallery-image-2.jpg" alt="Many people crowd around aquarium tank to take a photo of whale shark swimming by."></li>
+                <li class="gallery-container"><img src="images/gallery-image-3.jpg" alt="Aquarium tank with fish, coral, and water plants."></li>
             </ul>
         </div>
     </section>
